# reddittool

./: .env.example  .gitignore  README.md  analyze-only.bat  batrun.txt  batrun2.txt  pyproject.toml  run-agent.bat  run_qwen_plus.txt
docs/superpowers/plans/: 2026-06-15-reddit-pain-search-implementation.md
docs/superpowers/specs/: 2026-06-15-reddit-pain-search-design.md
scripts/: run-agent.ps1
src/reddit_pain_search/: __main__.py  classifier.py  cli.py  config.py  exporter.py  models.py  reddit_client.py  repository.py  web_access_reddit_client.py
tests/: test_classifier.py  test_cli.py  test_config.py  test_exporter.py  test_models.py  test_reddit_client.py  test_repository.py  test_web_access_reddit_client.py
