[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reddit-pain-search"
version = "0.1.0"
description = "Personal CLI for finding Reddit product pain points."
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "praw>=7.7.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
reddit-pain-search = "reddit_pain_search.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=reddit_pain_search --cov-report=term-missing"
pythonpath = ["src"]
